fix: At most one destination per asset (#1189)